--- a/app/css/shorts_weather.sass
+++ b/app/css/shorts_weather.sass
@@ -23,15 +23,14 @@ div
     &:after
       clear: both
     .search-box
-      width: 100%
+      width: 90%
       float: left
       background: #57565c
       border: none
-      font-size: 18px
+      font-size: 14px
       color: #FFFFFF
       font-family: 'Julius Sans One', sans-serif
-      text-align: center
-      padding: 10px 0
+      padding: 10px 5%
     .search-button
       width: 100%
       float: left
