--- a/views/shorts_weather.erb
+++ b/views/shorts_weather.erb
@@ -8,11 +8,13 @@
   </head>
   <body>
     <div class=question>Is It Shorts Weather Tomorrow At</div>
-    <div class=search-address>
-      <form id=search>
-        <input type=text name=search-address class=search-box>
-        <input type=submit value="Search" class=search-button>
-      </form>
+    <div class=search-wrapper>
+      <div class=search-address>
+        <form id=search>
+          <input type=text name=search-address class=search-box>
+          <input type=submit value="Search" class=search-button>
+        </form>
+      </div>
     </div>
     <div class="answer">
       <img src='loading.gif' class=loading>
